Added quickstart instructions for Java 14 and its preview feature for immutable records, which are demonstrated in this library.